--- a/style.css
+++ b/style.css
@@ -5,49 +5,188 @@
     padding: 0rem;
     font-size: 15px;
     font-family: 'Poppins',sans-serif;
-}
-body{
-    width: 700px;
-    min-height: 100vh;
-    background-color: blue;;
-
-}
-
-header{
-    width: 1395px;
-    height: 200px;
-    background-color: hsl(0, 0%, 98%);
-    text-align: center;;
-}
-.title-one{
-    
-    padding-top: 40px;
-    padding-bottom: 10px;
-    font-size: 30px;
-    color: hsl(229, 6%, 66%);
-
-    font-weight: 200;
-}
-.title-two{
-    font-size: 30px;
-    font-weight: 600px;
-    padding-bottom: 20px;
-
-}
-.def{
-    width: 460px;;
-    text-align: center;
-    margin: auto;
-    color: hsl(229, 6%, 66%);
     line-height: 1.5;
 }
-main{
-    display: grid;
-    min-height: 100vh;
-    grid-template-rows: 100px 100px 100px 100px;
-    grid-template-columns: 300px 300px 300px;
-    grid-gap: 5px;
-    margin: 40px;
-    justify-content: center;
+body{
+    width: 1100px;
+    height: 600px;
+    margin: auto; 
+    margin-top: 50px;; 
+    vertical-align: middle;
+    background-color: hsl(0, 0%, 98%);;
+  
+}
 
+.container{
+    display: grid;
+    height: 700px;
+    width: 100%;  
+    grid-gap: 10px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas: "header header header" 
+                         "...  team   ..."
+                          "sup   team   cal"
+                         "sup   karma  cal"
+                        "...   karma   ...";    
+}
+
+.box{
+    display: grid;
+    background-color: antiquewhite;
+    justify-content: center;
+    align-items: center;
+
+}
+.head{
+    text-align: center;
+    grid-area: header;
+
+}
+.calculator{
+    grid-area: cal;
+    position: relative;
+    border-top: 5px solid hsl(212, 86%, 64%);
+    border-radius: 5px;;
+}
+.team-builder{
+    grid-area: team;
+    position: relative;
+    border-top: 5px solid hsl(0, 78%, 62%);
+    border-radius: 5px;;
+}
+.karma{
+    position: relative;
+    grid-area: karma;
+    border-top: 5px solid hsl(34, 97%, 64%);
+    border-radius: 5px;;
+
+}
+.supervisor{
+    position: relative;
+    grid-area: sup;
+    border-top: 5px solid hsl(180, 62%, 55%);
+    border-radius: 5px;;
+
+
+}
+.title-one{
+    font-weight: 200;
+    font-size: 30px;
+    color:  hsl(229, 6%, 66%);
+    padding-bottom: 10px;
+    margin-block-start: 5px;
+    margin-block-end: 5px;
+}
+.title-two{
+    font-weight: 700;
+    font-size: 30px;
+    padding-top: 0px;
+    margin-block-start: 5px;
+    margin-block-end: 5px;
+    padding-bottom: 10px;
+
+
+}
+.con{
+    width:100%;
+}
+
+.def{
+    width: 480px;
+    font-weight: 400;
+    color:  hsl(229, 6%, 66%);
+  
+}
+.title-supervisor{
+    position: absolute;
+    top: 20px;
+    left:20px;
+    padding: 0;
+    font-weight: 700;
+   
+}
+.desc-supervisor{
+    position: absolute;
+    color:  hsl(229, 6%, 66%);
+    top: 50px;
+    left:20px;
+    padding: 0; 
+    width: 250px;
+    
+}
+.icon{
+    position: absolute;
+    width: 50px;
+    bottom: 30px;
+    right:30px;
+}
+
+.title-team{
+    position: absolute;
+    font-weight: 700;
+    top: 20px;
+    left:20px;
+    padding: 0;
+}
+.desc-team{
+    position: absolute;
+    color:  hsl(229, 6%, 66%);
+    top: 50px;
+    left:20px;
+    padding: 0; 
+    width: 270px;
+
+}
+.calculator-title{
+    position: absolute;
+    font-weight: 700;
+    top: 20px;
+    left:20px;
+    padding: 0;
+}
+
+.desc-calculator{
+    position: absolute;
+    color:  hsl(229, 6%, 66%);
+    top: 50px;
+    left:20px;
+    padding: 0; 
+    width: 270px;
+
+}
+.title-karama{
+    position: absolute;
+    font-weight: 700;
+    top: 20px;
+    left:20px;
+    padding: 0;
+}
+.desc-karama{
+    position: absolute;
+    color:  hsl(229, 6%, 66%);
+    top: 50px;
+    left:20px;
+    padding: 0; 
+    width: 270px;
+
+
+}
+@media only screen and (max-width: 375px) {
+    body{
+        width: 375x;
+        height: 100vh;
+         
+    }
+    .container{
+        display: grid;
+        grid-template-rows: 1fr 2fr 2fr 2fr 2fr;
+    }
+    .box{
+        display: grid;
+        background-color: antiquewhite;
+        justify-content: center;
+        align-items: center;
+    
+    }
+        
 }
