--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
     margin: auto; 
     margin-top: 50px;; 
     vertical-align: middle;
-    background-color: hsl(0, 0%, 98%);;
+    background-color: hsl(0, 0%, 98%);
   
 }
 
@@ -32,9 +32,10 @@ body{
 
 .box{
     display: grid;
-    background-color: antiquewhite;
+    background-color: hsl(0, 0%, 98%);
     justify-content: center;
     align-items: center;
+
 
 }
 .head{
@@ -43,22 +44,29 @@ body{
 
 }
 .calculator{
+   
     grid-area: cal;
     position: relative;
     border-top: 5px solid hsl(212, 86%, 64%);
     border-radius: 5px;;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
 .team-builder{
     grid-area: team;
     position: relative;
     border-top: 5px solid hsl(0, 78%, 62%);
-    border-radius: 5px;;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
 .karma{
     position: relative;
     grid-area: karma;
     border-top: 5px solid hsl(34, 97%, 64%);
-    border-radius: 5px;;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 
 }
 .supervisor{
@@ -66,6 +74,8 @@ body{
     grid-area: sup;
     border-top: 5px solid hsl(180, 62%, 55%);
     border-radius: 5px;;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 
 
 }
@@ -173,20 +183,91 @@ body{
 }
 @media only screen and (max-width: 375px) {
     body{
-        width: 375x;
+        width: 375px;
         height: 100vh;
          
     }
     .container{
         display: grid;
-        grid-template-rows: 1fr 2fr 2fr 2fr 2fr;
+        width: 375px;
+        height: 100vh;
+        grid-template-rows: 200 250 250 250 250;
+        grid-template-columns: 250;
+
+        grid-template-areas: "header"
+                             "sup"
+                             "team"
+                             "karma"
+                             "cal";
+
+      
     }
     .box{
         display: grid;
-        background-color: antiquewhite;
+        width:250px;
+        height: 220px;
+        background-color: hsl(0, 0%, 98%);
         justify-content: center;
         align-items: center;
+        margin-left: 30px;
+    }
+
+    .title-one{
+        font-weight: 200;
+        font-size: 20px;
+        padding-bottom: 0px;
+
+       
+    }
+    .title-two{
+        font-weight: 700;
+        font-size: 20px;
+        padding-bottom: 0px;
+
+    
     
     }
+    .def{
+        width: 250px;
+        font-weight: 400;
+        font-size: 14px;
+        color:  hsl(229, 6%, 66%);
+      
+    }
+    .head{
+        height: 200px;
+    }
+    .desc-supervisor{
+       
+        top: 50px;
+        left:10px;
+        font-size: 13px;
+             
+    }
+    .desc-calculator{
+        top: 50px;
+        left:10px;
+        font-size: 13px;
+        width: 200px;
+
+             
+    
+    }
+    .desc-karama{
+        top: 50px;
+        left:10px;
+        font-size: 13px;
+        width: 200px;
+
+    
+    }
+    .desc-team{
+        top: 50px;
+        left:10px;
+        font-size: 13px;
+        width: 200px;
+    
+    }
+   
         
 }
